# winapi-understanding

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  process_spawner.cpp  vcpkg.json
src/: create_file.cpp  dummy_pch.cpp  message_box.cpp  overlapped.cpp  parent_process_detector.cpp  pch.hpp  process_spawner.cpp  register-modifier.cpp  register_modifier.cpp  screen_capture.cpp
